2017-10-04  Carl Hetherington  <cth@carlh.net>

	* Updated da_DK translation from Anders Uhl Pedersen.

2017-10-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.24 released.

2017-09-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.23 released.

2017-09-20  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2017-09-03  Carl Hetherington  <cth@carlh.net>

	* Make Cmd+W work on OS X (#934).

2017-09-02  Carl Hetherington  <cth@carlh.net>

	* Remember the last directory used when opening DCPs in the player (#1121).

	* Build with a version of libopenjpeg derived from 2.2.0.

2017-09-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.22 released.

2017-09-01  Carl Hetherington  <cth@carlh.net>

	* Fix corruption of an existing DCP when a new one is made with the same video
	asset (#1126).

2017-08-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.21 released.

2017-08-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.20 released.

2017-08-31  Carl Hetherington  <cth@carlh.net>

	* Fix erroneous re-use of video files after turning off burnt subtitles (#1113).

2017-08-30  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

2017-08-27  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect ISDCF name in some cases (#1118).

2017-08-26  Carl Hetherington  <cth@carlh.net>

	* Stop the player looking for encode servers (#1119).

2017-08-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.19 released.

2017-08-20  Carl Hetherington  <cth@carlh.net>

	* Add VF/OV and KDM support to player.

2017-08-19  Carl Hetherington  <cth@carlh.net>

	* Deal with newly-invalid configured default container ratios
	gracefully.

2017-08-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.18 released.

2017-08-16  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated fr_FR translation from Thierry Journet.
